# PasswordManager

./: .gitignore  CMakeLists.txt  Main.qml  Menu.qml  PasswordInfo.h  PasswordsView.qml  main.cpp  main.cpp.autosave
Tests/: CMakeLists.txt
Tests/integrationTests/: tst_auth.cpp  tst_passowordmanager.cpp
Tests/unitTests/: tst_filemanager.cpp  tst_test_aes.cpp  tst_utils.cpp
authenticator/: userAuthenticator.cpp  userAuthenticator.h
encryption/: Encryption.h  aesEncryption.cpp  aesEncryption.h
filemanager/: fileManager.cpp  fileManager.h
manager/: passwordManager.cpp  passwordManager.cpp.autosave  passwordManager.h
utils/: constants.h  encryptionKeyGenerator.h  saltGenerator.h  sha-256.h
